--- a/www/partials/individual/coach-personalinfo.html
+++ b/www/partials/individual/coach-personalinfo.html
@@ -1,10 +1,10 @@
 <ion-view view-title="个人信息" hide-nav-bar="true">
-	<ion-header-bar>
-	  <button class="button button-icon icon ion-arrow-left-a" ng-click="onClickBackward()">返回</button>
-	  <div class="h1 title">个人信息</div>
+  <ion-header-bar>
+    <button class="button button-icon icon ion-arrow-left-a" ng-click="onClickBackward()">返回</button>
+    <div class="h1 title">个人信息</div>
 
-	  	  <button class="button button-icon icon ion-compose" ng-click="onClickSave()">保存</button>
-	</ion-header-bar>
+        <button class="button button-icon icon ion-compose" ng-click="onClickSave()">保存</button>
+  </ion-header-bar>
 
 <!--   <ion-refresher
     pulling-text="Pull to refresh..."
@@ -13,26 +13,26 @@
 
  
 
-<!--    <p>DoctorId	
+<!--    <p>DoctorId 
 
-DoctorName	
+DoctorName  
 
-Birthday	
+Birthday  
 
-Gender	
+Gender  
 
 IDNo
 
 
-PhotoAddress	
+PhotoAddress  
 
-UnitName	
+UnitName  
 
-JobTitle	
+JobTitle  
 
-Level	
+Level 
 
-Dept	
+Dept  
 
 </p> -->
 
@@ -50,7 +50,7 @@ Dept
 
       </a>
 
-      <a href="#" class="item item-icon-left item-icon-right" >
+      <a href="#" class="item item-icon-left item-icon-right" ng-click = "onClickEdit(0)" >
         <i class="icon ion-person"></i>
         {{userInfo.BasicInfo.name}}
         <i class="icon ion-chevron-right"></i>
