SERVICE Data.Users   ADD   Verification,Activition userservice  DELETE  没用的变量，函数，注释掉ispassvalid和istokenvalid,暂时不用
CONTROLLER
修改了一些跳转，原来跳不过去
startingCtrl    现在不进行istokenvalid，直接跳转登录
phonevalidCtrl  仅格式改动
HomeTabCtrl     新的，仅为提供ngcordova扫码插件的使用例子QRscan()

userDetail.html  去掉了注册函数里没用到的传入参数：性别

--- a/www/partials/login/userDetail.html
+++ b/www/partials/login/userDetail.html
@@ -51,7 +51,7 @@
         <input type="checkbox">
       </label> -->
       <span style="color:white">00</span><span style="color:#c55e19">{{logStatus}}</span>
-      <button class="button button-block button-stable" ng-click ="infoSetup(userName,userGender)">
+      <button class="button button-block button-stable" ng-click ="infoSetup(userName)">
             注册
       </button>
     </div>
