Services pageFunc 添加了一个方法 用来输入修改个人信息 添加了控制风险评估页面的Controller  添加了 若干风险评估的页面
加入了amcharts的插件
Signed-off-by: lrzlr2020 <lrzlr2014@gmail.com>

--- a/www/partials/individual/coach-personalinfo.html
+++ b/www/partials/individual/coach-personalinfo.html
@@ -50,19 +50,19 @@ Dept
 
       </a>
 
-      <a href="#" class="item item-icon-left item-icon-right" ng-click = "onClickEdit(0)" >
+      <a href="#" class="item item-icon-left item-icon-right" ng-click = "onClickEdit('姓名','userInfo','BasicInfo','name'); " >
         <i class="icon ion-person"></i>
         {{userInfo.BasicInfo.name}}
         <i class="icon ion-chevron-right"></i>
       </a>
 
-      <a href="#" class="item item-icon-left item-icon-right">
+      <a href="#" class="item item-icon-left item-icon-right" ng-click = "onClickEdit('姓名','userInfo','BasicInfo','birthday'); ">
         <i class="icon ion-calendar"></i>
         {{userInfo.BasicInfo.birthday}}
         <i class="icon ion-chevron-right"></i>
       </a>
 
-      <a href="#" class="item item-icon-left item-icon-right">
+      <a href="#" class="item item-icon-left item-icon-right" ng-click = "onClickEdit('姓名','userInfo','BasicInfo','gender'); ">
         <i class="icon ion-male"></i>
        {{userInfo.BasicInfo.gender}}
 <!--         <span class="item-note">
