--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,28 @@
-/* Empty. Add your own CSS if you like */
+#chartdiv {#chartdiv {
+  width   : 100%;
+  height    : 350px;
+  font-size : 12px;
+  display: inline;
+ 
+} 
+  width: 100%;
+  height: 350px;
+ 
+}
+
+
+#chartdiv2 {#chartdiv2 {
+  width   : 100%;
+  height    : 350px;
+  font-size : 12px;
+} 
+  width: 100%;
+  height: 350px;
+}
+
+.item-divider {
+  background-color: #EEE8D6;
+  font-size: 1.0rem;
+  font-weight: bold;
+  color: #000000;
+}
