--- a/www/partials/individual/coach.html
+++ b/www/partials/individual/coach.html
@@ -35,7 +35,7 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="coach-patients"></ion-nav-view>
   </ion-tab>  
 
-  <ion-tab title="新患者" icon-off="ion-android-person-add" icon-on="ion-android-person-add" href="#/coach/addpatients">
+  <ion-tab title="新患者（点这里会挂）" icon-off="ion-android-person-add" icon-on="ion-android-person-add" href="#/coach/addpatients">
     <!-- <ion-nav-view name="coach-addpatients"></ion-nav-view> -->
   </ion-tab>  
 
