--- a/www/partials/individual/coach-patientsdetail.html
+++ b/www/partials/individual/coach-patientsdetail.html
@@ -8,7 +8,7 @@
     <ion-list class="list-inset">
       <ion-patient class="patient-text-wrap"
         ng-repeat="patient in patients | filter: { shortname: whichartist }">
-         <img ng-src="img/{{patient.shortname}}_tn.jpg"
+         <img ng-src="http://placehold.it/300?text=placehold.it+rocks!"
             alt="{{ patient.name }} Photo">
           <h2>{{ patient.name }}</h2>
           <h3>{{ patient.reknown }}</h3>
