--- a/www/partials/individual/coach.html
+++ b/www/partials/individual/coach.html
@@ -36,7 +36,7 @@ navigation history that also transitions its views in and out.
   </ion-tab>  
 
   <ion-tab title="新患者（点这里会挂）" icon-off="ion-android-person-add" icon-on="ion-android-person-add" href="#/coach/addpatients">
-    <!-- <ion-nav-view name="coach-addpatients"></ion-nav-view> -->
+    <ion-nav-view name="coach-addpatients"></ion-nav-view>
   </ion-tab>  
 
   <ion-tab title="通知" icon-off="ion-android-mail" icon-on="ion-android-mail"  badge="130" badge-style="badge-assertive" href="#/coach/message">
