--- a/www/partials/individual/risk.html
+++ b/www/partials/individual/risk.html
@@ -4,13 +4,14 @@
 <ion-header-bar>
   <div class="h1 title">风险评估</div>    
   <button class="button button-icon ion-minus-circled" ng-click="data.showDelete = !data.showDelete; showReorder = false;">
-    </button>
-    <button class="button button-icon ion-plus" ng-click="onClickAdd()">
-    </button>
+  </button>
+  <button class="button button-icon ion-help-circled" ng-click="onClickEvaluation()">
+    新增
+  </button>
 </ion-header-bar>
 
 <!--   <ion-header-bar class="bar-balanced">
-    <h2 class="title">Patient List</h2>
+    <h2 class="title">item List</h2>
 
     <button class ="button button-icon ion-minus-circled" ng-click ="data.showDelete = !data.showDelete; showReorder = false;"></button>
 
@@ -37,33 +38,36 @@
     </ion-refresher>
   	
     <ion-list show-delete="data.showDelete" show-reorder="data.showReorder" >
-  		
-      <ion-item ng-class="{'star': patient.star}"  
-      collection-repeat ="patient in patients | filter: query " 
+
+      <ion-item ng-class="{'star': item.star}"  
+      collection-repeat ="item in risks | filter: query " 
       class ="item-thumbnail-left
       item-icon-right 
-      item-text-wrap"  href="#/risk/{{patient.name}}">
+      item-text-wrap"  href="#/risk/{{item.SortNo}}" ng-click="onChangeChartData(item.SBP,item.DBP)">
       <!-- 改动url -->
-      <img src="img/{{patient.shortname}}_tn.jpg"
-        alt="{{ patient.name }} Photo">
-  		<h2>{{patient.name}}</h2>
-  		<h3>{{patient.reknown}}</h3>
-  		<p>{{patient.bio | limitTo: 100  }}  {{ patient.bio.length > 150 ? '&hellip;' : '' }}</p>
-      
+      <img src="http://placehold.it/300/CCE8D6?text={{item.SortNo}}"
+        alt="{{ item.SortNo }} Photo">
+<!--   		<h2>{{item.SortNo}}</h2> -->
+  		<h2>{{item.AssessmentName}}</h2>
+      <h3>{{item.AssessmentType}} {{item.AssessmentTime}}</h3>
+  		<h4 ng-if= " item.AssessmentType == 'M1' ">{{item.SBP}} / {{item.DBP}} mmHg </h4>
+      <h4 ng-if= " item.AssessmentType == 'M2' ">  mmol/L  </h4>
+      <p> {{item.Result}} </p>
+       
       <button class="button button-clear icon ion-star button-assertive"
-        ng-click="toggleStar(patient)"
-        ng-show="patient.star"></button>
+        ng-click="toggleStar(item)"
+        ng-show="item.star"></button>
       
       <ion-option-button class="button-dark"
-        ng-click="toggleStar(patient)">
+        ng-click="toggleStar(item)">
         <i class="icon ion-star"></i>
       </ion-option-button>      
       
-      <ion-delete-button class="ion-minus-circled" ng-click="onItemDelete(patient)">
+      <ion-delete-button class="ion-minus-circled" ng-click="onItemDelete(item)">
       </ion-delete-button>      
       
       <ion-reorder-button class="ion-navicon"
-        on-reorder="moveItem(patient, $fromIndex, $toIndex)">
+        on-reorder="moveItem(item, $fromIndex, $toIndex)">
       </ion-reorder-button>
   		
       </ion-item>
