--- a/www/partials/individual/coach-personalinfo.html
+++ b/www/partials/individual/coach-personalinfo.html
@@ -6,6 +6,15 @@
         <button class="button button-icon icon ion-compose" ng-click="onClickSave()">保存</button>
   </ion-header-bar>
 
+<!--   <ion-nav-bar class="bar-balanced nav-title-slide-ios7">
+    <ion-nav-buttons side="left">
+      <button class="button button-icon icon ion-navicon " ng-click="doSomething()"></button>
+    </ion-nav-buttons>
+    <ion-nav-buttons side="right">
+      <button class="button button-icon icon ion-compose " ng-click="onClickSave()">保存</button>
+    </ion-nav-buttons>
+
+  </ion-nav-bar> -->
 <!--   <ion-refresher
     pulling-text="Pull to refresh..."
     on-refresh="DoctorId = 1 ">
