--- a/www/partials/login/changePassword.html
+++ b/www/partials/login/changePassword.html
@@ -1,8 +1,10 @@
       <ion-view title="修改密码">
-<!--         <ion-nav-bar class="bar-stable nav-title-slide-ios7">
-          <ion-nav-back-button class="button-icon ion-arrow-left-c">
-          </ion-nav-back-button>
-        </ion-nav-bar> -->
+        <ion-nav-bar class="bar-stable nav-title-slide-ios7">
+          <ion-nav-buttons side="left">
+            <button class="button button-icon icon ion-arrow-left-a " ng-click="onClickBackward()"></button>
+          </ion-nav-buttons>
+        </ion-nav-bar>
+        
         <ion-content padding="true">
          <div ng-hide="!ishide" class="list" >
 
