--- a/www/partials/individual/coach-config.html
+++ b/www/partials/individual/coach-config.html
@@ -1,15 +1,22 @@
-<ion-view view-title="设置" hide-nav-bar="true">
+<ion-view view-title="设置" >
 
 
-	<ion-header-bar >
+<!-- 	<ion-header-bar >
 	  <button class="button button-icon icon ion-arrow-left-a" ng-click="onClickBackward()">返回</button>
 	  <div class="h1 title">设置</div>
-	</ion-header-bar>
+	</ion-header-bar> -->
+
+	<ion-nav-bar class="bar-balanced nav-title-slide-ios7">
+      <ion-nav-buttons side="left">
+        <button class="button button-icon icon ion-arrow-left-a " ng-click="onClickBackward()"></button>
+      </ion-nav-buttons>
+	</ion-nav-bar>
 
 <ion-content>
-		修改密码
-		<p>
-		 跳转到熊嘉臻的页面 yeah
-		</p>
+		
+		
+		<button class="button " ng-click="onClickChangePassword()">修改密码</button>
+		<button class="button " ng-click="onClickChangePassword()">退出登录</button>
+		
   </ion-content>
 </ion-view>
