--- a/www/partials/login/userDetail.html
+++ b/www/partials/login/userDetail.html
@@ -51,7 +51,7 @@
         <input type="checkbox">
       </label> -->
       <span style="color:white">00</span><span style="color:#c55e19">{{logStatus}}</span>
-      <button class="button button-block button-stable" ng-click ="infoSetup(userName)">
+      <button class="button button-block button-stable" ng-click ="infoSetup(userName,userGender)">
             注册
       </button>
     </div>
