--- a/www/partials/individual/coach-home.html
+++ b/www/partials/individual/coach-home.html
@@ -12,7 +12,7 @@
       <button class="button button-icon icon ion-qr-scanner " ng-click="QRscan()">扫一扫</button>
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
-      <button class="button button-clear button-dark button-icon icon ion-plus-round" ng-click="">添加</button>
+      <button class="button button-clear button-dark button-icon icon ion-plus-round" ng-click="addpatient()">添加新患者</button>
     </ion-nav-buttons>
   </ion-nav-bar>
 
