--- a/www/partials/addpatient/basicinfo.html
+++ b/www/partials/addpatient/basicinfo.html
@@ -172,36 +172,36 @@
 			<div class='row responsive-sm'>
 				<div class='col'>
 					<label class="item item-input">
-						*家庭住址：<input type="text" ng-model="HomeAddress.Value">
+						家庭住址：<input type="text" ng-model="HomeAddress.Value">
 					</label>
 				</div>
 				<div class='col'>
 					<label class="item item-input">
-						*联系电话：<input type="text" ng-model="PhoneNumber.Value">
-					</label>
-				</div>
-			</div>
-			<div class='row responsive-sm'>
-				<div class='col'>
-					<label class="item item-input">
-						*国籍：<input type="text" ng-model="Nationality.Value">
-					</label>
-				</div>
-				<div class='col'>
-					<label class="item item-input">
-						*职业：<input type="text" ng-model="Occupation.Value">
+						联系电话：<input type="text" ng-model="PhoneNumber.Value">
 					</label>
 				</div>
 			</div>
 			<div class='row responsive-sm'>
 				<div class='col'>
 					<label class="item item-input">
-						*紧急联系人：<input type="text" ng-model="EmergencyContact.Value">
+						国籍：<input type="text" ng-model="Nationality.Value">
 					</label>
 				</div>
 				<div class='col'>
 					<label class="item item-input">
-						*紧急联系人电话：<input type="text" ng-model="EmergencyContactPhoneNumber.Value">
+						职业：<input type="text" ng-model="Occupation.Value">
+					</label>
+				</div>
+			</div>
+			<div class='row responsive-sm'>
+				<div class='col'>
+					<label class="item item-input">
+						紧急联系人：<input type="text" ng-model="EmergencyContact.Value">
+					</label>
+				</div>
+				<div class='col'>
+					<label class="item item-input">
+						紧急联系人电话：<input type="text" ng-model="EmergencyContactPhoneNumber.Value">
 					</label>
 				</div>
 			</div>
