--- a/www/partials/addpatient/ModuleInfoListDetail.html
+++ b/www/partials/addpatient/ModuleInfoListDetail.html
@@ -1,6 +1,6 @@
 <ion-view title="慢病信息">
 <ion-header-bar>
-    <a class="button icon-left ion-chevron-left button-clear button-dark" ng-click="onClickBackward()"></a>
+    <a class="button icon-left ion-chevron-left button-clear button-dark" ng-click="onClickBackward2()"></a>
     <h2 class="title">慢病信息</h2>
     <!-- <a class="button icon-right ion-chevron-right button-clear button-dark" ng-click="onClickForward()"></a> -->
 </ion-header-bar>
