--- a/www/partials/addpatient/newpatient.html
+++ b/www/partials/addpatient/newpatient.html
@@ -7,7 +7,7 @@
 <ion-header-bar>
     
     <h2 class="title">账号注册</h2>
-    <a class="button icon-right ion-android-home" href='#/new/master'></a>
+    <a class="button icon-right ion-android-home" href='#/coach/patients'></a>
     <!-- <a class="button icon-right ion-chevron-right button-clear button-dark" ng-click="onClickForward()"></a> -->
 </ion-header-bar>
 	<ion-content>
