初步完成了风险评估界面的所有功能 html risk || riskdetail  || riskquestions app.js  state || risk riskdetail || riskquestion controller.js RiskQuestionCtrl || RiskCtrl services.js factory: Data.RiskInfo || Patients 另外还装了amcharts serial.js 里面改了一点配色
Signed-off-by: lrzlr2020 <lrzlr2014@gmail.com>

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,12 +1,12 @@
 #chartdiv {#chartdiv {
   width   : 100%;
-  height    : 350px;
+  height    : 250px;
   font-size : 15px;
   display: inline;
   background-color: #EEE8D6;
 } 
   width: 100%;
-  height: 350px;
+  height: 250px;
   background-color: #F7F4EA;
  
 }
@@ -14,12 +14,12 @@
 
 #chartdiv2 {#chartdiv2 {
   width   : 100%;
-  height    : 350px;
-  font-size : 12px;
+  height    : 250px;
+  font-size : 15px;
   background-color: #EEE8D6;
 } 
   width: 100%;
-  height: 350px;
+  height: 250px;
   background-color: #F7F4EA;
 }
 
@@ -36,20 +36,20 @@
 } 
 
 .item h2 {
-  font-size: 1.3rem;
+  font-size: 1.0rem;
   font-weight: bold;
   color: #000000;
 }
 
 .item h3 {
-  font-size: 1.2rem;
+  font-size: 0.9rem;
   font-weight: bold;
   color: #817D9A;
 }
 
 
 .item h4 {
-  font-size: 1.2rem;
+  font-size: 0.8rem;
   font-weight: bold;
-  color: #06bee1;
+  color: #06beF1;
 }
