--- a/www/partials/individual/risk.html
+++ b/www/partials/individual/risk.html
@@ -40,19 +40,29 @@
     <ion-list show-delete="data.showDelete" show-reorder="data.showReorder" >
 
       <ion-item ng-class="{'star': item.star}"  
-      collection-repeat ="item in risks | filter: query " 
+      collection-repeat ="item in newRisks | filter: query " 
       class ="item-thumbnail-left
       item-icon-right 
-      item-text-wrap"  href="#/risk/{{item.SortNo}}" ng-click="onChangeChartData(item.SBP,item.DBP)">
+      item-text-wrap"  href="#/risk/{{item.num}}" >
       <!-- 改动url -->
-      <img src="http://placehold.it/300/CCE8D6?text={{item.SortNo}}"
+      <img src="http://placehold.it/300/CCE8D6?text={{item.num}}"
         alt="{{ item.SortNo }} Photo">
 <!--   		<h2>{{item.SortNo}}</h2> -->
-  		<h2>{{item.AssessmentName}}</h2>
-      <h3>{{item.AssessmentType}} {{item.AssessmentTime}}</h3>
-  		<h4 ng-if= " item.AssessmentType == 'M1' ">{{item.SBP}} / {{item.DBP}} mmHg </h4>
-      <h4 ng-if= " item.AssessmentType == 'M2' ">  mmol/L  </h4>
-      <p> {{item.Result}} </p>
+      <div class="row">
+        <div class="col">
+            <h2>{{item.M1.AssessmentName}}</h2>
+            <h3>{{item.M1.AssessmentTime}}</h3>
+            <h4>{{item.M1.SBP}} / {{item.M1.DBP}} mmHg </h4>
+            <!-- <p> {{item.M1.Result | limitTo: 10  }}  {{ patient.bio.length > 10 ? '&hellip;' : '' }} </p> -->
+        </div>
+    		<div class="col">
+            <h2>{{item.M2.AssessmentName}}</h2>
+            <h3>{{item.M2.AssessmentTime}}</h3>
+            <h4>{{item.M2.Period}} : {{item.M2.Glucose}} mmol/L </h4>
+            <!-- <p> {{item.M2.Result | limitTo: 10  }}  {{ patient.bio.length > 10 ? '&hellip;' : '' }} </p> -->
+        </div>
+     </div>   
+      
        
       <button class="button button-clear icon ion-star button-assertive"
         ng-click="toggleStar(item)"
