--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,55 +1,59 @@
-#chartdiv {#chartdiv {
-  width   : 100%;
-  height    : 250px;
-  font-size : 15px;
-  display: inline;
-  background-color: #EEE8D6;
-} 
-  width: 100%;
-  height: 250px;
-  background-color: #F7F4EA;
- 
-}
-
-
-#chartdiv2 {#chartdiv2 {
-  width   : 100%;
-  height    : 250px;
-  font-size : 15px;
-  background-color: #EEE8D6;
-} 
-  width: 100%;
-  height: 250px;
-  background-color: #F7F4EA;
-}
-
-.item-divider {
-  background-color: #EEE8D6;
-  font-size: 1.0rem;
-  font-weight: bold;
-  color: #000000;
-}
-
-
-.star>.item-content {
-  background-color: #EEE8D6 !important;
-} 
-
-.item h2 {
-  font-size: 1.0rem;
-  font-weight: bold;
-  color: #000000;
-}
-
+/* Empty. Add your own CSS if you like */
 .item h3 {
-  font-size: 0.9rem;
+  font-size: 1.3rem;
   font-weight: bold;
-  color: #817D9A;
+  color: #417D9A;
+}
+.item h2 {
+  font-size: 1.2rem;
+  font-weight: bold;
+  
+  
+}
+.item h1 {
+  font-size: 1rem;
+    color: #666666;
+    margin-top: 5.6px;
 }
 
+.item-thumbnail-left img {
+  border-radius: 10px;
+}
+.item-row{
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  width: 100%;
+}
 
-.item h4 {
-  font-size: 0.8rem;
-  font-weight: bold;
-  color: #06beF1;
+.processbar{
+	background-color:#417D9A;
+	height:100%;
+}
+
+.markDisplay1
+{
+  display:block;
+}
+.markDisplay0
+{
+  display:none;
+}
+
+.markDisplaytrue
+{
+  display:block;
+}
+.markDisplayfalse
+{
+  display:none;
+}
+
+.markDisplay 
+{
+  display:none;
 }
