--- a/www/partials/individual/coach-home.html
+++ b/www/partials/individual/coach-home.html
@@ -1,11 +1,20 @@
-<ion-view view-title = "健康专员主页  ({{state}}) "  hide-nav-bar="true">
+<ion-view view-title = "健康专员主页  ({{state}}) "  >
 
-  <ion-header-bar >
+<!--   <ion-header-bar >
     <button class="button button-icon icon ion-qr-scanner">扫一扫</button>
     <div class="h1 title">健康专员主页({{state}})</div>
     <button class="button button-clear button-dark button-icon icon ion-plus-round">添加</button>
-  </ion-header-bar>
+  </ion-header-bar> -->
 
+  <ion-nav-bar class="bar-balanced nav-title-slide-ios7">
+
+    <ion-nav-buttons side="left">
+      <button class="button button-icon icon ion-qr-scanner " ng-click="QRscan()">扫一扫</button>
+    </ion-nav-buttons>
+    <ion-nav-buttons side="right">
+      <button class="button button-clear button-dark button-icon icon ion-plus-round" ng-click="addpatient()">添加新患者</button>
+    </ion-nav-buttons>
+  </ion-nav-bar>
 
 <ion-content>
 
@@ -65,7 +74,7 @@
       我的日程
     </span>
 
-    <span class="button button-block button-clear icon ion-gear-a" ng-click="onClickPersonalConfig()" href='#/config'>
+    <span class="button button-block button-clear icon ion-gear-a" ng-click="onClickPersonalConfig()">
       设置
     </span>
 
