又修改了一个画图的bug 初步完成了个人信息维护的功能 具体数据再哪里整合还不清楚 Signed-off-by: lrzlr2020 <lrzlr2014@gmail.com>

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -57,3 +57,29 @@
 {
   display:none;
 }
+
+
+#chartdiv {#chartdiv {
+  width   : 100%;
+  height    : 250px;
+  font-size : 15px;
+  display: inline;
+  background-color: #EEE8D6;
+} 
+  width: 100%;
+  height: 250px;
+  background-color: #F7F4EA;
+ 
+}
+
+
+#chartdiv2 {#chartdiv2 {
+  width   : 100%;
+  height    : 250px;
+  font-size : 15px;
+  background-color: #EEE8D6;
+} 
+  width: 100%;
+  height: 250px;
+  background-color: #F7F4EA;
+}
