--- a/www/partials/individual/coach-idupload.html
+++ b/www/partials/individual/coach-idupload.html
@@ -9,7 +9,10 @@
 <ion-list class="list-inset">
 
   <label class="item item-input">
-    <input type="text" placeholder="姓名" ng-model="Info.name">    
+
+    <span class="input-label">姓名</span>
+    
+    <input type="text" ng-model="Info.name">    
   </label>
 
 
@@ -24,9 +27,17 @@
   </label>
 
 
-  <label class="item item-input">
-    <input type="text" placeholder="生日" ng-model="Info.birthday">    
-  </label>
+  <a class="item">
+        <ionic-datepicker input-obj="datepickerObject">
+        <div>
+        <span>生日</span>
+        <span class="item-note ">
+          {{Info.birthday}}
+        </span>
+      </div>
+        </ionic-datepicker>
+       
+  </a>
 
     <div class="item item-divider">详细信息</div>
 
@@ -44,9 +55,10 @@
 </ion-list>
 
 <!-- <img ng-src="{{lastPhoto}}" style="max-width: 100%"> -->
-<img ng-show="imgURI != undefined"  ng-click="onClickCamera($event)" ng-src="{{imgURI}}"  style ="height=100 width =100 middle ">
-<img ng-show="imgURI == undefined" ng-click="onClickCamera($event)" ng-src="img/plus.png" height=100 width=100>
-
+<div style ="height=100; width =100; display:block; text-align:center;">
+  <img ng-show = "imgURI != undefined"  ng-click="onClickCamera($event)" ng-src="{{imgURI}}"  >
+  <img ng-show = "imgURI == undefined" ng-click="onClickCamera($event)" ng-src='http://placehold.it/300/CCE8D6?text="plus"' width = 300 height =300>
+</div>
 <!--  {{"http://placehold.it/300?text=placehold.it+fuck!"}}
  --><!--   <ion-list>
     <div class="list list-inset">
