--- a/www/partials/individual/coach-home.html
+++ b/www/partials/individual/coach-home.html
@@ -25,14 +25,20 @@
       <img ng-src="{{imgURI}}">
       <h2>{{ userInfo.BasicInfo.name }}</h2>
       <p>{{userInfo.DtInfo.unitname}}</p>
+      <span class="badge badge-balanced">{{userInfo.BasicInfo.id}}</span>      
     </div>
 
     <div class="item item-body">
       <!-- <img class="avatar" ng-src= "{{imgURI}}" > -->
+  
       <p>
+        {{userInfo.DtInfo.dept}}
+      </p>
+      <p>{{userInfo.DtInfo.jobTitle}}</p>
+
+          <p>
          {{userInfo.DtInfo.level}}
       </p>
-      
       <p>
         <a href="#" class="subdued">1 Like</a>
         <a href="#" class="subdued">5 Comments</a>
@@ -63,9 +69,9 @@
   </div>
   <ion-list>
 
-    <ion-nav-view name="coach-config"></ion-nav-view>
+<!--     <ion-nav-view name="coach-config"></ion-nav-view>
     <ion-nav-view name="coach-personalinfo"></ion-nav-view>
-    <ion-nav-view name="coach-schedule"></ion-nav-view>
+    <ion-nav-view name="coach-schedule"></ion-nav-view> -->
     <span class="button button-block button-clear icon ion-information-circled" ng-click="onClickPersonalInfo()" href='#/personalinfo'>
       个人信息
     </span>
